--- a/jaxws/hello-appclient/pom.xml
+++ b/jaxws/hello-appclient/pom.xml
@@ -1,7 +1,18 @@
+<!--
+
+    Copyright (c) 2018, 2019 Oracle and/or its affiliates. All rights reserved.
+
+    This program and the accompanying materials are made available under the
+    terms of the Eclipse Distribution License v. 1.0, which is available at
+    http://www.eclipse.org/org/documents/edl-v10.php.
+
+    SPDX-License-Identifier: BSD-3-Clause
+
+-->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.glassfish.javaeetutorial</groupId>
     <artifactId>hello-appclient</artifactId>
     <packaging>app-client</packaging>
 
@@ -11,7 +22,7 @@
     </properties>
 
     <parent>
-        <groupId>org.glassfish.javaeetutorial</groupId>
+        <groupId>jakarta.tutorial</groupId>
         <artifactId>jaxws</artifactId>
         <version>8.1-SNAPSHOT</version>
     </parent>
@@ -27,7 +38,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>                      
-                            <mainClass>javaeetutorial.hello.appclient.HelloAppClient</mainClass>
+                            <mainClass>jakarta.tutorial.hello.appclient.HelloAppClient</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -47,7 +58,7 @@
                                 <wsdlFile>HelloService.wsdl</wsdlFile>
                             </wsdlFiles>
                             <wsdlLocation>http://localhost:8080/helloservice/HelloService?WSDL</wsdlLocation>
-                            <packageName>javaeetutorial.helloservice.endpoint</packageName>
+                            <packageName>jakarta.tutorial.helloservice.endpoint</packageName>
                         </configuration>
                         <phase>generate-sources</phase>
                     </execution>
