--- a/jaxws/helloservice-war/pom.xml
+++ b/jaxws/helloservice-war/pom.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+    Copyright (c) 2018, 2019 Oracle and/or its affiliates. All rights reserved.
+
+    This program and the accompanying materials are made available under the
+    terms of the Eclipse Distribution License v. 1.0, which is available at
+    http://www.eclipse.org/org/documents/edl-v10.php.
+
+    SPDX-License-Identifier: BSD-3-Clause
+
+-->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.glassfish.javaeetutorial</groupId>
     <artifactId>helloservice-war</artifactId>
     <packaging>war</packaging>
     <name>helloservice-war</name>
     <description>Simple example JAX-WS web service.</description>
 
     <parent>
-        <groupId>org.glassfish.javaeetutorial</groupId>
+        <groupId>jakarta.tutorial</groupId>
         <artifactId>jaxws</artifactId>
         <version>8.1-SNAPSHOT</version>
     </parent>
@@ -28,7 +39,7 @@
                             <goal>wsgen</goal>
                         </goals>
                         <configuration>
-                            <sei>javaeetutorial.helloservice.Hello</sei>
+                            <sei>jakarta.tutorial.helloservice.Hello</sei>
                             <genWsdl>true</genWsdl>
                         </configuration>
                     </execution>
