Add Rest full Sample

--- a/archijavaspringboot/src/main/resources/application.properties
+++ b/archijavaspringboot/src/main/resources/application.properties
@@ -17,6 +17,10 @@ server.port=8088
 #spring.thymeleaf.mode=HTML5
 #spring.thymeleaf.cache=false
 #------------------------------------
+
+##### Spring DATA REST -------------
+spring.data.rest.basePath=/api
+#####
 Datasource Config
 #-------------------------
 spring.datasource.hikari.initial-size=15
