--- a/archijavaspringboot/src/main/resources/application-dev.properties
+++ b/archijavaspringboot/src/main/resources/application-dev.properties
@@ -10,6 +10,14 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Configure Hibernate DDL mode: create / update
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
+#Turn Statistics on
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=debug
+# Show all queries
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=error
 
 		
 
