--- a/archijavaspringboot/src/main/resources/application-dev.properties
+++ b/archijavaspringboot/src/main/resources/application-dev.properties
@@ -16,8 +16,8 @@ logging.level.org.hibernate.stat=debug
 # Show all queries
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=error
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=trace
 
 		
 
