Update /Bug Spring Security / H2 Console

--- a/archijavaspringboot/src/main/resources/application.properties
+++ b/archijavaspringboot/src/main/resources/application.properties
@@ -21,7 +21,7 @@ server.port=8088
 ##### Spring DATA REST -------------
 spring.data.rest.basePath=/api
 #####
-Datasource Config
+#Datasource Config
 #-------------------------
 spring.datasource.hikari.initial-size=15
 # Number of ms to wait before throwing an exception if no connection is available.
